fixing bug of images moving out of place

--- a/style.css
+++ b/style.css
@@ -106,8 +106,16 @@ border-radius: 18px; */
 }
 .topNav .right {
   order: 2;
+  
+  display: flex;
+  flex-direction: row;
+  justify-content:center;
   /*border: 1px solid black;
 border-radius: 18px;*/
+}
+.topNav .right img{
+  height:30px;
+  width:30px;
 }
 .postArea{
   order:2;
